• Add some links

--- a/contributors.html
+++ b/contributors.html
@@ -15,7 +15,7 @@
     <!--container-->
     <div class="container">
         <!--logo-->
-        <img src="img/logo.png" alt="" class="logo" />
+        <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
         <!--navigation-->
         <nav class="navigation">
             <ul>
@@ -59,7 +59,6 @@
                 </div>
 
                 <hr>
-                <p>Het kost momenteel veel tijd en handmatig werk om projecten van Fontys te beheren en om deze te koppelen en te presenteren aan de (juiste) studenten.</p>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pharetra, neque non aliquam tincidunt, urna lacus ornare urna, eu rutrum lectus metus vel lorem. Quisque et iaculis velit. Maecenas vel leo in felis efficitur malesuada. Aenean
                     ut lectus in est tincidunt cursus vitae eu dui. Nulla ut libero eu sem egestas finibus. Integer mauris justo, finibus in ullamcorper ac, eleifend nec eros. Nullam at lacinia risus, eget varius nisi. In varius tortor at nunc efficitur
                     aliquam. Mauris quis ultrices metus, vitae tincidunt purus. Fusce ac hendrerit magna. Suspendisse nec nisl ut arcu vestibulum pretium ut sed ipsum. </p>
