--- a/design.html
+++ b/design.html
@@ -15,7 +15,7 @@
     <!--container-->
     <div class="container">
         <!--logo-->
-        <img src="img/logo.png" alt="" class="logo" />
+        <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
         <!--navigation-->
         <nav class="navigation">
             <ul>
