--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--container-->
     <div class="container">
         <!--logo-->
-        <img src="img/logo.svg" alt="" class="logo" />
+        <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
         <!--navigation-->
         <nav class="navigation">
             <ul>
@@ -59,9 +59,9 @@
                     <li><a class="btn-plex btn-plex-white" href="#who">Who’s it for</a></li>
                     <li><a class="btn-plex btn-plex-white" href="#why">Why build it?</a></li>
                     <li><a class="btn-plex btn-plex-white" href="#what">What is it?</a></li>
-                    <li><a class="btn-plex btn-plex-white" href="#tech">UI/UX</a></li>
-                    <li><a class="btn-plex btn-plex-white" href="#tech">Code</a></li>
-                    <li><a class="btn-plex btn-plex-blue bg-blue" href="#"><span class="icon-intro"><ion-icon name="logo-github"></ion-icon></span></a></li>
+                    <li><a class="btn-plex btn-plex-white" href="design.html">UI/UX</a></li>
+                    <li><a class="btn-plex btn-plex-white" href="code.html">Code</a></li>
+                    <li><a class="btn-plex btn-plex-blue bg-blue" href="https://github.com/Faktor22/Plex-PRD" target="_blank"><span class="icon-intro"><ion-icon name="logo-github"></ion-icon></span></a></li>
                 </nav>
             </div>
             <!--content-->
