--- a/code.html
+++ b/code.html
@@ -15,7 +15,7 @@
     <!--container-->
     <div class="container">
         <!--logo-->
-        <img src="img/logo.png" alt="" class="logo" />
+        <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
         <!--navigation-->
         <nav class="navigation">
             <ul>
@@ -55,7 +55,7 @@
 
                 <div class="sub-header">
                     <h1>Front-end / Back-end</h1>
-                    <button class="btn-plex btn-plex-yellow">Check Gitlab<span class="icon-primary icon-code"><ion-icon name="arrow-redo-outline"></ion-icon></span></button>
+                    <a href="https://github.com/Faktor22/Plex-PRD" target="_blank"><button class="btn-plex btn-plex-yellow">Gitlab<span class="icon-primary icon-code"><ion-icon name="arrow-redo-outline"></ion-icon></span></button></a>
                 </div>
 
                 <hr>
