--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
     <title>Product Requirements Document</title>
-    <link rel="icon" type="image/png" href="img/favicon.png" />
+    <link rel="icon" type="image/png" href="../img/favicon.png" />
     <link rel="stylesheet" href="../css/style.css">
-    <script src="../js/script.js" defer></script>
+    <!--scripts-->
+    <script defer src="../js/script.js"></script>
+    <script defer type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script defer nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 
 <body>
     <!--container-->
     <div class="container">
         <!--logo-->
-        <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
+        <a href="index.html"><img src="../img/logo.png" alt="Logo Plex" class="logo" /></a>
         <!--navigation-->
         <nav class="navigation">
             <ul>
                 <li>
-                    <!-- <span class="tooltiptext">New project list</span> -->
                     <a href="contributors.html">
                         <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
                     </a>
@@ -66,6 +68,10 @@
             </div>
             <!--content-->
             <div class="intro-page">
+                <!--progress bar-->
+                <!-- <div class="progress-container">
+                    <div class="progress-bar" id="progress-indicator" style="background: #6200d9;"></div>
+                </div> -->
                 <a id="intro"></a>
                 <h1>Product Requirements Document</h1>
                 <hr>
@@ -135,7 +141,6 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ac scelerisque lorem. Sed neque ipsum, venenatis non condimentum sit amet, accumsan ac enim. Praesent lectus nibh, interdum eget lacus mattis, facilisis facilisis justo.
                     Etiam a enim ut libero porta sodales. In vitae facilisis tellus. Mauris a felis metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; </p>
 
-
                 <h3 class="sub">User Types</h3>
                 <ol>
                     <li>Teachers - teachers that are connected to canvas and have an unique ID</li>
@@ -146,9 +151,6 @@
             </div>
         </main>
     </div>
-
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 
