--- a/scope.html
+++ b/scope.html
@@ -8,19 +8,21 @@
     <title>Scope</title>
     <link rel="icon" type="image/png" href="../img/favicon.png" />
     <link rel="stylesheet" href="../css/style.css">
-    <script src="../js/script.js" defer></script>
+    <!--scripts-->
+    <script defer src="../js/script.js"></script>
+    <script defer type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script defer nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 
 <body>
     <!--container-->
     <div class="container">
         <!--logo-->
-        <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
+        <a href="index.html"><img src="../img/logo.png" alt="Logo Plex" class="logo" /></a>
         <!--navigation-->
         <nav class="navigation">
             <ul>
                 <li>
-                    <!-- <span class="tooltiptext">New project list</span> -->
                     <a href="contributors.html">
                         <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
                     </a>
@@ -61,8 +63,7 @@
                 <hr>
                 <h2>User stories and requirements</h2>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pharetra, neque non aliquam tincidunt, urna lacus ornare urna, eu rutrum lectus metus vel lorem. Quisque et iaculis velit. Maecenas vel leo in felis efficitur malesuada. Aenean
-                    ut lectus in est tincidunt cursus vitae eu dui. Nulla ut libero eu sem egestas finibus. Integer mauris justo, finibus in ullamcorper ac, eleifend nec eros. Nullam at lacinia risus, eget varius nisi. In varius tortor at nunc efficitur
-                    aliquam. Mauris quis ultrices metus, vitae tincidunt purus. Fusce ac hendrerit magna. Suspendisse nec nisl ut arcu vestibulum pretium ut sed ipsum. </p>
+                    ut lectus in est tincidunt cursus vitae eu dui. Nulla ut libero eu sem egestas finibus. Integer mauris justo, finibus in ullamcorper ac, eleifend nec eros.</p>
 
                 <!--userstories-->
                 <div class="userstories-container">
@@ -329,9 +330,6 @@
             </div>
         </main>
     </div>
-
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 
