--- a/design.html
+++ b/design.html
@@ -8,19 +8,21 @@
     <title>Design Ui/UX</title>
     <link rel="icon" type="image/png" href="../img/favicon.png" />
     <link rel="stylesheet" href="../css/style.css">
-    <script src="../js/script.js" defer></script>
+    <!--scripts-->
+    <script defer src="../js/script.js"></script>
+    <script defer type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script defer nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 
 <body>
     <!--container-->
     <div class="container">
         <!--logo-->
-        <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
+        <a href="index.html"><img src="../img/logo.png" alt="Logo Plex" class="logo" /></a>
         <!--navigation-->
         <nav class="navigation">
             <ul>
                 <li>
-                    <!-- <span class="tooltiptext">New project list</span> -->
                     <a href="contributors.html">
                         <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
                     </a>
@@ -101,9 +103,6 @@
             </div>
         </main>
     </div>
-
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 
