• Naming User Stories aangepast

--- a/scope.html
+++ b/scope.html
@@ -70,7 +70,7 @@
                     <div class="userstories-todo">
                         <p>Backlog - To do</p>
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als student, wil ik mijn top 3 van de aangeboden projecten kunnen kiezen, zodat de projectleider mijn voorkeur kan inzien</p>
+                            <p class="userstorie-titel">Als student, wil ik mijn top 3 van de aangeboden projecten kunnen kiezen, zodat de docent mijn voorkeur kan inzien</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -84,7 +84,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als projectleider en student, wil ik een gedetailleerde beschrijving van de projecten kunnen bekijken, zodat ik een weloverwogen keuze kan maken om een project wel- of niet als voorkeur op te geven</p>
+                            <p class="userstorie-titel">Als docent en student, wil ik een gedetailleerde beschrijving van de projecten kunnen bekijken, zodat ik een weloverwogen keuze kan maken om een project wel- of niet als voorkeur op te geven</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -95,7 +95,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als ik projectleider wil ik als ik een nieuw project aan DeX heb toegevoegd, dit project meteen in PLeX zien zodat ik deze kan toevoegen aan een lijst.</p>
+                            <p class="userstorie-titel">Als docent wil ik als ik een nieuw project aan DeX heb toegevoegd, dit project meteen in PLeX zien zodat ik deze kan toevoegen aan een lijst.</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -106,7 +106,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als ik projectleider wil ik als ik een nieuw project aan DeX heb toegevoegd, dit project meteen in PLeX zien zodat ik deze kan toevoegen aan een lijst.</p>
+                            <p class="userstorie-titel">Als docent wil ik als ik een nieuw project aan DeX heb toegevoegd, dit project meteen in PLeX zien zodat ik deze kan toevoegen aan een lijst.</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -119,7 +119,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als projectleider, wil ik een melding kunnen delen naar de geselecteerde groepen, zodat deelnemers toegang hebben tot de project opties</p>
+                            <p class="userstorie-titel">Als docent, wil ik een melding kunnen delen naar de geselecteerde groepen, zodat studenten toegang hebben tot de project opties</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -130,7 +130,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als projectleider, wil ik dat de groepjes automatisch worden samengesteld, zodat er rekening wordt gehouden op basis van de top 3 en welke richting een deelnemer zich wilt focussen</p>
+                            <p class="userstorie-titel">Als docent, wil ik dat de groepjes automatisch worden samengesteld, zodat er rekening wordt gehouden op basis van de top 3 en welke richting een student zich wilt focussen</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -141,7 +141,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als projectleider, wil ik projecten in het overzicht kunnen zoeken met behulp van een zoekbalk, zodat ik een project snel kan vinden.</p>
+                            <p class="userstorie-titel">Als docent, wil ik projecten in het overzicht kunnen zoeken met behulp van een zoekbalk, zodat ik een project snel kan vinden.</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -152,7 +152,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als projectleider, wil ik een gebruiksvriendelijke user interface, zodat projectleiders en deelnemers er snel en efficient mee kunnen werken.</p>
+                            <p class="userstorie-titel">Als docent, wil ik een gebruiksvriendelijke user interface, zodat docents en studenten er snel en efficient mee kunnen werken.</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -163,7 +163,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als projectleider, wil ik een deadline instellen, zodat het voor deelnemers duidelijk is wanneer zij hun keuze moeten doorgeven.</p>
+                            <p class="userstorie-titel">Als docent, wil ik een deadline instellen, zodat het voor studenten duidelijk is wanneer zij hun keuze moeten doorgeven.</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -174,7 +174,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als deelnemer, wil ik inzage hebben in wie er uiteindelijk in mijn projectgroep zit, zodat ik een beeld heb wie er in mijn groep zit.</p>
+                            <p class="userstorie-titel">Als student, wil ik inzage hebben in wie er uiteindelijk in mijn projectgroep zit, zodat ik een beeld heb wie er in mijn groep zit.</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -185,7 +185,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als projectleider, wil ik statistieken van de projecten kunnen inzien, zodat ik een goed beeld heb van de populariteit per project.</p>
+                            <p class="userstorie-titel">Als docent, wil ik statistieken van de projecten kunnen inzien, zodat ik een goed beeld heb van de populariteit per project.</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -196,7 +196,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als deelnemer, wil ik dat het niet mogelijk is om meer dan drie voorkeuren op te geven zodat ik kan voorkomen dat ik teveel voorkeuren opgeef en daardoor niet de juiste projecten toegewezen krijg.</p>
+                            <p class="userstorie-titel">Als student, wil ik dat het niet mogelijk is om meer dan drie voorkeuren op te geven zodat ik kan voorkomen dat ik teveel voorkeuren opgeef en daardoor niet de juiste projecten toegewezen krijg.</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -207,7 +207,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als deelnemer, wil ik projecten kunnen opslaan, zodat ik deze op een later moment nog eens terug kan lezen.</p>
+                            <p class="userstorie-titel">Als student, wil ik projecten kunnen opslaan, zodat ik deze op een later moment nog eens terug kan lezen.</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -218,7 +218,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als deelnemer, wil ik een project kunnen selecteren als favorieten, zodat ik hierdoor mijn (top 3) voorkeurprojecten op een later tijdstip kenbaar kan maken aan de projectleider.</p>
+                            <p class="userstorie-titel">Als student, wil ik een project kunnen selecteren als favorieten, zodat ik hierdoor mijn (top 3) voorkeurprojecten op een later tijdstip kenbaar kan maken aan de docent.</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -229,7 +229,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als projectleider, wil ik deelnemers kunnen toevoegen aan een projectlijst, zodat deelnemers hun voorkeur voor project kunnen aangeven.</p>
+                            <p class="userstorie-titel">Als docent, wil ik studenten kunnen toevoegen aan een projectlijst, zodat studenten hun voorkeur voor project kunnen aangeven.</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -245,11 +245,11 @@
                     <div class="userstories-done">
                         <p>Done</p>
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als projectleider, wil ik de voorkeuren van de studenten kunnen zien, zodat ik naderhand eenvoudig projectgroepen kan maken met deelnemers die dezelfde voorkeur hebben.</p>
+                            <p class="userstorie-titel">Als docent, wil ik de voorkeuren van de studenten kunnen zien, zodat ik naderhand eenvoudig projectgroepen kan maken met studenten die dezelfde voorkeur hebben.</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
-                                    <li>Geeft een lijst weer van de door de projectleider geselecteerde projecten</li>
+                                    <li>Geeft een lijst weer van de door de docent geselecteerde projecten</li>
                                     <li>Per project is de titel, korte omschrijving en categorieën te zien</li>
                                 </ul>
                             </div>
@@ -257,11 +257,11 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als projectleider, wil ik een lijst kunnen samenstellen van projecten, zodat deze gegroepeerd aan deelnemers kunnen worden gepresenteerd.</p>
+                            <p class="userstorie-titel">Als docent, wil ik een lijst kunnen samenstellen van projecten, zodat deze gegroepeerd aan studenten kunnen worden gepresenteerd.</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
-                                    <li>Geeft een lijst weer van de door de projectleider geselecteerde projecten</li>
+                                    <li>Geeft een lijst weer van de door de docent geselecteerde projecten</li>
                                     <li>Per project is de titel, korte omschrijving en categorieën te zien</li>
                                 </ul>
                             </div>
@@ -269,7 +269,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als projectleider, wil ik een gebruiksvriendelijke User Interface hebben, zodat er een optimale usability ontstaat.</p>
+                            <p class="userstorie-titel">Als docent, wil ik een gebruiksvriendelijke User Interface hebben, zodat er een optimale usability ontstaat.</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
@@ -295,7 +295,7 @@
                         </div>
 
                         <div class="userstories-cards">
-                            <p class="userstorie-titel">Als projectleider wil ik projecten in het overzicht kunnen filteren op categorie, zodat ik zeker weet dat ik een goede balans tussen de disciplines vind.</p>
+                            <p class="userstorie-titel">Als docent wil ik projecten in het overzicht kunnen filteren op categorie, zodat ik zeker weet dat ik een goede balans tussen de disciplines vind.</p>
                             <div class="acceptatie-container">
                                 <p class="acceptatie">Acceptatiecriteria</p>
                                 <ul class="list">
