• Add Heading to scope

--- a/scope.html
+++ b/scope.html
@@ -68,7 +68,7 @@
                 <!--userstories-->
                 <div class="userstories-container">
                     <div class="userstories-todo">
-                        <p>Backlog - To do</p>
+                        <h3>Backlog - To do</h3>
                         <div class="userstories-cards">
                             <p class="userstorie-titel">Als student, wil ik mijn top 3 van de aangeboden projecten kunnen kiezen, zodat de docent mijn voorkeur kan inzien</p>
                             <div class="acceptatie-container">
@@ -243,7 +243,7 @@
 
 
                     <div class="userstories-done">
-                        <p>Done</p>
+                        <h3>Done</h3>
                         <div class="userstories-cards">
                             <p class="userstorie-titel">Als docent, wil ik de voorkeuren van de studenten kunnen zien, zodat ik naderhand eenvoudig projectgroepen kan maken met studenten die dezelfde voorkeur hebben.</p>
                             <div class="acceptatie-container">
@@ -264,7 +264,7 @@
                                     <li>Geeft een lijst weer van de door de docent geselecteerde projecten</li>
                                     <li>Per project is de titel, korte omschrijving en categorieën te zien</li>
                                 </ul>
-                            </div>
+                            </div>`
                             <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
                         </div>
 
